reformat and add basic web homepage